<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/onPrimary"
    android:background="@color/onPrimary">

    <LinearLayout
        android:id="@+id/brown_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_bottom"
        android:paddingHorizontal="16dp"
        android:paddingBottom="68dp"
        android:orientation="vertical"
        android:gravity="bottom"
        app:layout_constraintBottom_toTopOf="@+id/white_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:scaleX="1.6"
            android:scaleY="1.6"
            android:src="@mipmap/logo_foreground" />

        <TextView
            android:id="@+id/login_text"
            style="@style/HeadlineSmallDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/onPrimary"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            style="@style/CustomTextInputLayoutStyleDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:hint="@string/username_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                style="@style/CustomEditTextStyleDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mail_layout"
            style="@style/CustomTextInputLayoutStyleDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/mail_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mail_edit_text"
                style="@style/CustomEditTextStyleDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/CustomTextInputLayoutStyleDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password_input"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                style="@style/CustomEditTextStyleDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_layout"
            style="@style/CustomTextInputLayoutStyleDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password_input"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_edit_text"
                style="@style/CustomEditTextStyleDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/white_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:paddingHorizontal="16dp"
        android:paddingVertical="28dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brown_background">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/register_button" />

        <LinearLayout
            android:id="@+id/login_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_account"
                android:paddingRight="4dp"/>

            <TextView
                android:id="@+id/login_text_action"
                style="@style/BodySmallBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_action" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
