<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/onPrimary"
    android:background="@color/onPrimary">

    <!-- Fondo superior (marrón) con logo y campos de texto -->
    <LinearLayout
        android:id="@+id/brown_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_bottom"
        android:paddingHorizontal="16dp"
        android:paddingBottom="68dp"
        android:orientation="vertical"
        android:gravity="bottom"
        app:layout_constraintBottom_toTopOf="@+id/white_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/logo_foreground" />

        <TextView
            android:id="@+id/login_text"
            style="@style/HeadlineSmallDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/onPrimary"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"/>

        <!-- Campo de usuario -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            style="@style/CustomTextInputLayoutStyleDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/username_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                style="@style/CustomEditTextStyleDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo de contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/CustomTextInputLayoutStyleDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password_input"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                style="@style/CustomEditTextStyleDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Fondo inferior (blanco) con botón y texto de registro -->
    <LinearLayout
        android:id="@+id/white_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:paddingHorizontal="16dp"
        android:paddingVertical="28dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brown_background">

        <!-- Botón de inicio de sesión -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/ButtonPrimary"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:text="@string/login" />

        <!-- Texto de registro -->
        <LinearLayout
            android:id="@+id/register_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:paddingRight="4dp"/>

            <TextView
                android:id="@+id/register_text"
                style="@style/BodySmallBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_action" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
