<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAlarmActivity"
    android:background="@color/onPrimary"
    >

    <FrameLayout
        android:id="@+id/toolbar_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:maxHeight="64dp">
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        android:paddingTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_fragment_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttons_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alarm_name_layout"
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alarm_name_input">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/alarm_name_text"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
            >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_text"
                        style="@style/LabelLarge"/>
                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/toggle_button_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        <com.google.android.material.button.MaterialButton
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="47dp"
                            android:layout_height="40dp"
                            android:insetTop="4dp"
                            android:insetBottom="4dp"
                            android:padding="4dp"
                            android:text="L"
                            android:textColor="@color/onPrimaryContainer"
                            app:backgroundTint="@color/toggle_button_color"
                            app:strokeColor="@color/onPrimaryContainer" />
                        <com.google.android.material.button.MaterialButton
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="47dp"
                            android:layout_height="40dp"
                            android:insetTop="4dp"
                            android:insetBottom="4dp"
                            android:padding="4dp"
                            android:text="M"
                            android:textSize="14sp"
                            android:textColor="@color/onPrimaryContainer"
                            app:backgroundTint="@color/toggle_button_color"
                            app:strokeColor="@color/onPrimaryContainer"/>
                        <com.google.android.material.button.MaterialButton
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="47dp"
                            android:layout_height="40dp"
                            android:insetTop="4dp"
                            android:insetBottom="4dp"
                            android:padding="4dp"
                            android:text="X"
                            android:textSize="14sp"
                            android:textColor="@color/onPrimaryContainer"
                            app:backgroundTint="@color/toggle_button_color"
                            app:strokeColor="@color/onPrimaryContainer"/>
                        <com.google.android.material.button.MaterialButton
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="47dp"
                            android:layout_height="40dp"
                            android:insetTop="4dp"
                            android:insetBottom="4dp"
                            android:padding="4dp"
                            android:text="J"
                            android:textSize="14sp"
                            android:textColor="@color/onPrimaryContainer"
                            app:backgroundTint="@color/toggle_button_color"
                            app:strokeColor="@color/onPrimaryContainer"/>
                        <com.google.android.material.button.MaterialButton
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="48dp"
                            android:layout_height="40dp"
                            android:insetTop="4dp"
                            android:insetBottom="4dp"
                            android:padding="4dp"
                            android:text="V"
                            android:textSize="14sp"
                            android:textColor="@color/onPrimaryContainer"
                            app:backgroundTint="@color/toggle_button_color"
                            app:strokeColor="@color/onPrimaryContainer"/>
                        <com.google.android.material.button.MaterialButton
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="47dp"
                            android:layout_height="40dp"
                            android:insetTop="4dp"
                            android:insetBottom="4dp"
                            android:padding="4dp"
                            android:text="S"
                            android:textSize="14sp"
                            android:textColor="@color/onPrimaryContainer"
                            app:backgroundTint="@color/toggle_button_color"
                            app:strokeColor="@color/onPrimaryContainer"/>
                        <com.google.android.material.button.MaterialButton
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="47dp"
                            android:layout_height="40dp"
                            android:insetTop="4dp"
                            android:insetBottom="4dp"
                            android:padding="4dp"
                            android:text="D"
                            android:textSize="14sp"
                            android:textColor="@color/onPrimaryContainer"
                            app:backgroundTint="@color/toggle_button_color"
                            app:strokeColor="@color/onPrimaryContainer"/>

                    </com.google.android.material.button.MaterialButtonToggleGroup>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_selected"
                        style="@style/LabelLargeProminent"
                        />
                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_calendar"
                    style="@style/ButtonSecondary"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="1dp"
                    app:icon="@drawable/calendar_icon"
                    app:iconPadding="0dp"
                    app:iconSize="24dp"
                    app:iconTint="@null"
                    app:iconGravity="textEnd"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/alarm_departure_point_layout"
                    style="@style/CustomTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/alarm_departure_point">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/alarm_departure_point_text"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_departure"
                    style="@style/ButtonSecondary"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="1dp"
                    app:icon="@drawable/location_icon"
                    app:iconPadding="0dp"
                    app:iconSize="24dp"
                    app:iconTint="@null"
                    app:iconGravity="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/alarm_destination_point_layout"
                    style="@style/CustomTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/alarm_destination_point">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/alarm_destination_point_text"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_destination"
                    style="@style/ButtonSecondary"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="1dp"
                    app:icon="@drawable/location_icon"
                    app:iconPadding="0dp"
                    app:iconSize="24dp"
                    app:iconTint="@null"
                    app:iconGravity="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/alarm_departure_time_layout"
                    style="@style/CustomTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/alarm_departure_time">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/alarm_departure_time_text"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_departure_time"
                    style="@style/ButtonSecondary"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="1dp"
                    app:icon="@drawable/time_icon"
                    app:iconPadding="0dp"
                    app:iconSize="24dp"
                    app:iconTint="@null"
                    app:iconGravity="textEnd"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/check_in_advance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="Sonar"
                app:buttonTint="@color/checkbox_selector"
                app:buttonIconTint="@color/onPrimary"
                android:textColor="@color/onPrimaryContainer"
                android:fontFamily="@font/roboto_regular"
                android:textAppearance="@style/LabelMedium"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dropdown_menu"
                style="@style/CustomDropdownStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:enabled="false">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:hint="Tiempo"
                    android:backgroundTint="@color/surface"
                    android:textColorHint="@color/box_stroke_color"
                    android:textColor="@color/box_stroke_color"/>

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="antes"

                style="@style/LabelMedium"/>

        </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:paddingVertical="27dp"
        android:paddingHorizontal="16dp"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            style="@style/ButtonSecondary"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/cancel_action"
            android:layout_marginBottom="1dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create"
            style="@style/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/create_action"
            android:layout_marginBottom="1dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
